fabric/testdata/out/ing_smart-product-platform-test-gateway-put-issues-id-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"Weight(3)
      \u0026\u0026 Path(\"/issues/:id\") \u0026\u0026 Method(\"PUT\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\") -\u003e oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\") -\u003e setResponseHeader(\"Content-Type\", \"application/problem+json\")
      -\u003e status(501) -\u003e inlineContent(\"{\\\"title\\\": \\\"Issues Updates
      Not Yet Supported\\\", \\\"status\\\": 501}\") -\u003e \u003cshunt\u003e"},"labels":{"application":"smart-product-platform-test","component":"service","controller-uid":"d3827fcf-dbf7-4d68-9e09-27e82003d0db","deployment-id":"d-sgokz8f17ukn9f5xqjnpf9xuk","environment":"staging","pipeline-id":"l-2dwhxqk9wh3m6ur6ovucqfumec","version":"master-13"},"name":"smart-product-platform-test-gateway-put-issues-id-all","namespace":"default"},"spec":{"rules":[{"host":"spp-product-details.smart-product-pla [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: 'Weight(3) && Path("/issues/:id") && Method("PUT")
      && Header("X-Forwarded-Proto", "https") -> oauthTokeninfoAnyKV("realm", "/services",
      "realm", "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid")
      -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward", "uid", "scope", "realm")
      -> setResponseHeader("Content-Type", "application/problem+json") -> status(501)
      -> inlineContent("{\"title\": \"Issues Updates Not Yet Supported\", \"status\":
      501}") -> <shunt>'
  creationTimestamp: "2021-07-06T12:27:21Z"
  generation: 1
  labels:
    application: smart-product-platform-test
    component: service
    controller-uid: d3827fcf-dbf7-4d68-9e09-27e82003d0db
    deployment-id: d-sgokz8f17ukn9f5xqjnpf9xuk
    environment: staging
    pipeline-id: l-2dwhxqk9wh3m6ur6ovucqfumec
    version: master-13
  name: smart-product-platform-test-gateway-put-issues-id-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: smart-product-platform-test-gateway
    uid: d3827fcf-dbf7-4d68-9e09-27e82003d0db
  resourceVersion: "1357488781"
  uid: 33c31d2b-8142-4d67-8f6e-c0a12af25e62
spec:
  rules:
  - host: spp-product-details.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: smart-product-platform-test
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
